--- a/addon/templates/bf-sunburst.hbs
+++ b/addon/templates/bf-sunburst.hbs
@@ -1,23 +1,23 @@
-<div {{bind-attr style=customStyle}} class="sunburst" >
-  <div class="sunburst-explanation" {{bind-attr style=explanationStyle}}>
+<div {{bind-attr style=customStyle}} class="bf-sunburst" >
+  <div class="bf-sunburst-explanation" {{bind-attr style=explanationStyle}}>
     <div style="width:100%; height:100%; position:relative;">
       <svg width="100%" height="30%"> </svg>
       <svg width="100%" height="8%" viewBox="0 0 8 20" style="position:relative">
-        <text x="0" y="18" text-anchor="middle" class="sunburst-title"></text>
+        <text x="0" y="18" text-anchor="middle" class="bf-sunburst-title"></text>
       </svg>
       <svg width="100%" height="10%" viewBox="0 0 10 45" style="position:relative">
-        <text x="0" y="36" text-anchor="middle" class="sunburst-percentage"></text>
+        <text x="0" y="36" text-anchor="middle" class="bf-sunburst-percentage"></text>
       </svg>
       <svg width="100%" height="6%" viewBox="0 0 8 18" style="position:relative">
-        <text x="0" y="12" text-anchor="middle" class="sunburst-description"></text>
+        <text x="0" y="12" text-anchor="middle" class="bf-sunburst-description"></text>
       </svg>
       <svg width="100%" height="8%" viewBox="0 0 8 25" style="position:relative">
-        <text x="0" y="15" text-anchor="middle" class="sunburst-fill_type"></text>
+        <text x="0" y="15" text-anchor="middle" class="bf-sunburst-fill_type"></text>
       </svg>
 
-      <svg width="100%" height="8%" viewBox="0 0 8 35" class="sunburst-link-container" style="position:relative; z-index:999999;">
+      <svg width="100%" height="8%" viewBox="0 0 8 35" class="bf-sunburst-link-container" style="position:relative; z-index:999999;">
         <a {{action "changeRoute" linkRoute linkRouteId}}>
-          <text x="0" y="15" text-anchor="middle" class="sunburst-link">
+          <text x="0" y="15" text-anchor="middle" class="bf-sunburst-link">
             {{linkRouteLabel}}
           </text>
         </a>
@@ -25,7 +25,7 @@
       <svg width="100%" height="36%"> </svg>
     </div>
   </div>
-  <div class="sunburst-svg-container" >  </div>
-  <div class="sunburst-legend"> </div>
-  <div class="sunburst-details">  </div>
+  <div class="bf-sunburst-svg-container" >  </div>
+  <div class="bf-sunburst-legend"> </div>
+  <div class="bf-sunburst-details">  </div>
 </div>
