Step into migrating older ember code into working use of sunburst in dummy app

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,5 @@
-<h2 id="title">Welcome to Ember.js</h2>
+<h2 id="title">Welcome to Ember.js: Bonfire Sunburst</h2>
+
+{{bf-sunburst dataSource=exampleDataSource}}
 
 {{outlet}}
