Stop using bind-attr

--- a/app/templates/components/bf-sunburst.handlebars
+++ b/app/templates/components/bf-sunburst.handlebars
@@ -1,5 +1,5 @@
-<div {{bind-attr style=customStyle}} class="bf-sunburst">
-  <div class="bf-sunburst-explanation" {{bind-attr style=explanationStyle}}>
+<div style={{customStyle}} class="bf-sunburst">
+  <div class="bf-sunburst-explanation" style={{explanationStyle}}>
     <div style="width:100%; height:100%; position:relative;">
       <svg width="100%" height="30%"> </svg>
       <svg width="100%" height="8%" viewBox="0 0 8 20" style="position:relative">
