--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,5 +1,7 @@
 <h2 id="title">Welcome to Ember.js: Bonfire Sunburst</h2>
 
-{{bf-sunburst dataSource=exampleDataSource}}
+<div style="width:300px; height:400px">
+  {{bf-sunburst dataSource=exampleDataSource}}
+</div>
 
 {{outlet}}
