Base SVG scaling on container not parameter width and height

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,6 +1,6 @@
 <h2 id="title">Welcome to Ember.js: Bonfire Sunburst</h2>
 
-<div style="width:300px; height:400px">
+<div style="width:300px; border:1px solid red;">
   {{bf-sunburst dataSource=exampleDataSource}}
 </div>
 
