--- a/app/templates/components/bf-sunburst.handlebars
+++ b/app/templates/components/bf-sunburst.handlebars
@@ -25,7 +25,7 @@
       <svg width="100%" height="36%"> </svg>
     </div>
   </div>
-  <div class="bf-sunburst-svg-container" >  </div>
+  <div class="bf-sunburst-svg-container" style="width:100%; margin:auto">  </div>
   <div class="bf-sunburst-legend"> </div>
   <div class="bf-sunburst-details">  </div>
 </div>
