--- a/app/templates/components/bf-sunburst.handlebars
+++ b/app/templates/components/bf-sunburst.handlebars
@@ -1,28 +1,8 @@
 <div style={{customStyle}} class="bf-sunburst">
   <div class="bf-sunburst-explanation" style={{explanationStyle}}>
-    <div style="width:100%; height:100%; position:relative;">
-      <svg width="100%" height="30%"> </svg>
-      <svg width="100%" height="8%" viewBox="0 0 8 20" style="position:relative">
-        <text x="0" y="18" text-anchor="middle" class="bf-sunburst-title"></text>
-      </svg>
-      <svg width="100%" height="10%" viewBox="0 0 10 45" style="position:relative">
-        <text x="0" y="36" text-anchor="middle" class="bf-sunburst-percentage"></text>
-      </svg>
-      <svg width="100%" height="6%" viewBox="0 0 8 18" style="position:relative">
-        <text x="0" y="12" text-anchor="middle" class="bf-sunburst-description"></text>
-      </svg>
-      <svg width="100%" height="8%" viewBox="0 0 8 25" style="position:relative">
-        <text x="0" y="15" text-anchor="middle" class="bf-sunburst-fill_type"></text>
-      </svg>
-      <svg width="100%" height="8%" viewBox="0 0 8 35" class="bf-sunburst-link-container" style="position:relative; z-index:999999;">
-        <a {{action "changeRoute" linkRoute linkRouteId}}>
-          <text x="0" y="15" text-anchor="middle" class="bf-sunburst-link">
-            {{linkRouteLabel}}
-          </text>
-        </a>
-      </svg>
-      <svg width="100%" height="36%"> </svg>
-    </div>
+    <svg viewBox="-87 -87 200 200" preserveAspectRatio="xMidYMid meet">
+      {{yield}}
+    </svg>
   </div>
   <div class="bf-sunburst-svg-container" style="width:100%; margin:auto">  </div>
   <div class="bf-sunburst-legend"> </div>
